--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
            <div class="img">
                <img src="img.png" alt="">
                <div class="button">
-                <a href="main.html"><button>View Project</button></a>
+                <a href="./Project/index.html"><button>View Project</button></a>
             </div>
            </div>
          </div>
